[metadata]
name = edge_autotune
version = 0.0.1-dev # attr: package.__version__
author = Daniel Rivas
author_email = daniel.rivas@bsc.es
description = Edge AutoTune. Framework that automates fine-tuning of edge models
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HiEST/edgeautotuner
classifiers = 
	Programming Language :: Python :: 3

license = Apache 2.0 License
license_file = LICENSE

[options]
packages_dir =
  = src
packages = find:
python_requires = >= 3.6
install_requires =
	tensorflow>=2.4.1	
	opencv-python>=4.4
	pandas
	Pillow>=8.1.1
	tqdm

[options.packages.find]
where = src
include = ['edge_autotune', 'edge_autotune.apps', 'edge_autotune.dnn', 'edge_autotune.utils']
exclude = ['edge_autotune.post', 'edge_autotune.process', 'edge_autotune.training']

[option.extras_require]
dev = pytest >=3.7
