##########################
# Setup.py Configuration #
##########################
[metadata]
name = edge_autotune
version = 0.0.1-dev
description = Edge AutoTune. Framework for an automated fine-tuning of edge models
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/HiEST/edgeautotuner
download_url = https://github.com/HiEST/edgeautotuner/releases
project_urls =
    Bug Tracker = https://github.com/HiEST/edgeautotuner/issues
    Source Code = https://github.com/HiEST/edgeautotuner

# Author information
author = Daniel Rivas
author_email = daniel.rivas@bsc.es
maintainer = Daniel Rivas
maintainer_email = daniel.rivas@bsc.es

# License Information
license = Apache 2.0 License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords =

[options]
install_requires =
    flask
    flask-restful
    flask-prometheus
    prometheus-client
    pandas
    numpy
    opencv-python
    Pillow
    imutils
    more_itertools
    tqdm
    click
    more_click

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
include = ['edge_autotune', 'edge_autotune.apps', 'edge_autotune.dnn', 'edge_autotune.motion']

[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs
    texext

[options.entry_points]
console_scripts =
    edge_autotune = edge_autotune.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = edge_autotune
omit =
    tests/*
    docs/*

[coverage:paths]
source =
    src/edge_autotune
    .tox/*/lib/python*/site-packages/edge_autotune

[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError
    if __name__ == .__main__.:
    def __str__
    def __repr__

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
